@@ -11,6 +11,8 @@
         <spring.version>4.0.0.RELEASE</spring.version>
         <sl4j.verions>1.7.5</sl4j.verions>
         <logback.version>1.0.13</logback.version>
+        <xmx>-Xmx128m</xmx>
+        <perm>-XX:MaxPermSize=256m</perm>
     </properties>
 
     <dependencies>
@@ -41,6 +43,22 @@
                     <target>${java.compiler.version}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <configuration>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>-classpath</argument>
+                        <classpath />
+                        <argument>${xmx}</argument>
+                        <argument>${perm}</argument>
+                        <argument>-XX:+PrintGCDetails</argument>
+                        <argument>-XX:+HeapDumpOnOutOfMemoryError</argument>
+                        <argument>pl.lrozek.spring.leak.main.LeakMain</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencyManagement>
@@ -65,4 +83,13 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <profiles>
+        <profile>
+            <id>permLeak</id>
+            <properties>
+                <xmx>-Xmx1G</xmx>
+                <perm>-XX:MaxPermSize=64m</perm>
+            </properties>
+        </profile>
+    </profiles>
 </project>
